--- a/index.html
+++ b/index.html
@@ -7,9 +7,38 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Nama: Sakti Indra Satriawan</h1>
-    <p>Umur: 25 tahun</p>
+  <div class="main-container">
+    <aside class="sidebar">
+      <h3>Daftar Isi</h3>
+      <ul>
+        <li><a href="#data-diri">👤 Data Diri</a></li>
+        <li><a href="#minat">🔍 Minat</a></li>
+        <li><a href="#aktivitas">📅 Aktivitas</a></li>
+      </ul>
+    </aside>
+    <main class="content">
+      <section id="data-diri">
+        <h1>👤 Nama dan Umur</h1>
+        <p>Nama: Sakti Indra Satriawan</p>
+        <p>Umur: 25 tahun</p>
+      </section>
+
+      <section id="minat">
+        <h2>🔍 Minat</h2>
+        <ul>
+          <li>AI dan Optimisasi Multi-Objektif</li>
+          <li>Komunikasi Antar Kendaraan (V2X)</li>
+        </ul>
+      </section>
+
+      <section id="aktivitas">
+        <h2>📅 Aktivitas</h2>
+        <ul>
+          <li>2025: Berkunjung ke KAUST</li>
+          <li>2024: Kolaborasi di UK</li>
+        </ul>
+      </section>
+    </main>
   </div>
 </body>
 </html>
