--- a/index.html
+++ b/index.html
@@ -1,44 +1,26 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Nama dan Umur</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="main-container">
-    <aside class="sidebar">
-      <h3>Daftar Isi</h3>
-      <ul>
-        <li><a href="#data-diri">👤 Data Diri</a></li>
-        <li><a href="#minat">🔍 Minat</a></li>
-        <li><a href="#aktivitas">📅 Aktivitas</a></li>
-      </ul>
-    </aside>
-    <main class="content">
-      <section id="data-diri">
-        <h1>👤 Nama dan Umur</h1>
-        <p>Nama: Sakti Indra Satriawan</p>
-        <p>Umur: 25 tahun</p>
-      </section>
-
-      <section id="minat">
-        <h2>🔍 Minat</h2>
-        <ul>
-          <li>AI dan Optimisasi Multi-Objektif</li>
-          <li>Komunikasi Antar Kendaraan (V2X)</li>
-        </ul>
-      </section>
-
-      <section id="aktivitas">
-        <h2>📅 Aktivitas</h2>
-        <ul>
-          <li>2025: Berkunjung ke KAUST</li>
-          <li>2024: Kolaborasi di UK</li>
-        </ul>
-      </section>
-    </main>
-  </div>
-</body>
-</html>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Curriculum Vitae</title>
+    <style>
+        :root {
+            --primary-color: #3498db;
+            --secondary-color: #2c3e50;
+            --accent-color: #e74c3c;
+            --text-color: #333;
+            --light-gray: #f5f5f5;
+            --white: #ffffff;
+            --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            --transition: all 0.3s ease;
+        }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            color: var(--text-color);
