--- a/index.html
+++ b/index.html
@@ -1,26 +1,55 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum Vitae</title>
-    <style>
-        :root {
-            --primary-color: #3498db;
-            --secondary-color: #2c3e50;
-            --accent-color: #e74c3c;
-            --text-color: #333;
-            --light-gray: #f5f5f5;
-            --white: #ffffff;
-            --shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            --transition: all 0.3s ease;
-        }
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            color: var(--text-color);
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Curriculum Vitae</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <div class="container">
+    <header>
+      <h1>Muhammad Andi Saputra</h1>
+      <p>Jakarta, Indonesia | andisaputra@example.com | +62 812 3456 7890</p>
+    </header>
+
+    <section id="profil">
+      <h2>Profil Singkat</h2>
+      <p>
+        Saya adalah seorang pengembang perangkat lunak dengan pengalaman dalam pengembangan web dan aplikasi berbasis data.
+        Menguasai bahasa pemrograman seperti Python, JavaScript, dan SQL.
+      </p>
+    </section>
+
+    <section id="pendidikan">
+      <h2>Pendidikan</h2>
+      <ul>
+        <li><strong>Teknik Informatika - Universitas Indonesia</strong>, 2015–2019</li>
+        <li><strong>SMA Negeri 1 Jakarta</strong>, 2012–2015</li>
+      </ul>
+    </section>
+
+    <section id="pengalaman">
+      <h2>Pengalaman Kerja</h2>
+      <ul>
+        <li><strong>PT Teknologi Cerdas</strong> – Pengembang Web, 2020–Sekarang</li>
+        <li><strong>CV Solusi Digital</strong> – Magang IT Support, 2019</li>
+      </ul>
+    </section>
+
+    <section id="keterampilan">
+      <h2>Keterampilan</h2>
+      <ul>
+        <li>Python, JavaScript, PHP</li>
+        <li>HTML, CSS, React, Node.js</li>
+        <li>MySQL, PostgreSQL, MongoDB</li>
+        <li>Git, Docker, Linux</li>
+      </ul>
+    </section>
+
+    <footer>
+      <p>&copy; 2025 Muhammad Andi Saputra</p>
+    </footer>
+  </div>
+</body>
+</html>
